FAMOUS : 3 commit : Main v.2

--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
 
 
             <!-- Scroll Down Indicator -->
-            <div id="scroll-down-indicator" class="absolute bottom-[40px] left-1/2 -translate-x-1/2 flex flex-col items-center gap-4 pb-2 z-50">
+            <div id="scroll-down-indicator"
+                class="absolute bottom-[40px] left-1/2 -translate-x-1/2 flex flex-col items-center gap-4 pb-2 z-50">
                 <span class="text-sm font-semibold text-black tracking-wide">Scroll Down</span>
                 <div class="w-8 h-8 rounded-full border border-black flex items-center justify-center animate-bounce"
                     style="animation-duration: 2s;">
@@ -400,7 +401,7 @@
                     데이터 기반의 정밀한 매칭과<br>압도적인 퍼포먼스를 경험하세요.
                 </p>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-[24px] pt-16">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-[12px] pt-16">
 
                 <!-- 1. 활성 DB수 -->
                 <div
