--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         }
 
         .text-huge {
-            /* Increased size (1.2x) */
+            /* Increased size (1.2x) -> Reduced by 15% */
             font-family: 'Paperlogy-8ExtraBold', sans-serif;
-            font-size: clamp(5.4rem, 15.6vw, 18rem);
+            font-size: clamp(4.8rem, 13.5vw, 16rem);
             line-height: 0.9;
         }
 
@@ -172,6 +172,34 @@
                     style="image-rendering: -webkit-optimize-contrast; transform: translateZ(0); backface-visibility: hidden;">
             </div>
 
+            <!-- Background Objects Layer (Original Objects Moved Here) -->
+            <div class="absolute top-0 left-0 w-full h-full z-0 pointer-events-none overflow-hidden"
+                id="hero-objects-layer">
+                <!-- Obj 1 (Camera): Up 40px (100px total), Left 34px (-15 - 34 = -49px total) -->
+                <div class="hero-obj hover-float absolute" id="obj-camera"
+                    style="top: calc(-2vw + 100px); left: calc(-6vw - 49px); width: 34vw; z-index: -1; transform: scaleX(-1) rotate(-5deg); filter: drop-shadow(-30px 30px 20px rgba(255, 180, 0, 0.3));">
+                    <img src="./assets/images/camera_3d_new.png" alt="Camera 3D" class="w-full">
+                </div>
+
+                <!-- Obj 2 (Triangle): Size -3% (13vw * 0.97 ~= 12.6vw), Up 10px (bottom + 10px) -->
+                <div class="hero-obj hover-float absolute" id="obj-shape"
+                    style="bottom: calc(8vh + 10px); left: calc(3vw + 160px); width: 12.6vw; z-index: -1; transform: rotate(10deg); filter: drop-shadow(30px 30px 20px rgba(0, 100, 255, 0.3));">
+                    <img src="./assets/images/triangle_3d.png" alt="Triangle 3D" class="w-full">
+                </div>
+
+                <!-- Obj 3 (Heart): Right 20px (70px - 20px = 50px total) -->
+                <div class="hero-obj hover-float absolute" id="obj-heart"
+                    style="top: -6vw; right: calc(-8vw + 50px); width: 29vw; z-index: -1; transform: rotate(15deg); filter: drop-shadow(30px 30px 20px rgba(200, 50, 255, 0.3));">
+                    <img src="./assets/images/heart_3d.png" alt="Heart 3D" class="w-full">
+                </div>
+
+                <!-- Obj 4 (Thumb): Size -3% (18.4vw), Down 160px (from -106px -> +54px) -->
+                <div class="hero-obj hover-float absolute" id="obj-thumb"
+                    style="top: calc(50% + 54px); right: calc(21vw - 230px); width: 18.4vw; z-index: -1; transform: translateY(-50%) rotate(0deg); filter: drop-shadow(30px 30px 20px rgba(255, 60, 0, 0.3));">
+                    <img src="./assets/images/thumb_3d.png" alt="Thumb 3D" class="w-full">
+                </div>
+            </div>
+
             <!-- Content Container (Text + Objects) -->
             <div class="relative z-10 flex flex-col items-center justify-center w-full gap-[24px]">
 
@@ -183,36 +211,12 @@
                     <div id="hero-text-left"
                         class="text-huge tracking-tighter relative flex items-center justify-center">
                         <span class="relative z-10">FAM</span>
-
-                        <!-- Obj 1 (Camera): Repositioned Behind/Covering 'F' (Updated) -->
-                        <div class="hero-obj hover-float" id="obj-camera"
-                            style="top: calc(-55% - 40px); left: -28%; width: 360px; z-index: -1; transform: scaleX(-1) rotate(-5deg); filter: drop-shadow(-30px 30px 10px rgba(255, 180, 0, 0.3));">
-                            <img src="./assets/images/camera_3d.png" alt="Camera 3D" class="w-full">
-                        </div>
-
-                        <!-- Obj 2 (Triangle): Moved Down 16px more -->
-                        <div class="hero-obj hover-float" id="obj-shape"
-                            style="bottom: calc(-60% - 16px); left: calc(15% - 10px); width: 180px; z-index: 50; transform: rotate(10deg); filter: drop-shadow(30px 30px 10px rgba(0, 100, 255, 0.3));">
-                            <img src="./assets/images/triangle_3d.png" alt="Triangle 3D" class="w-full">
-                        </div>
                     </div>
 
                     <!-- Right Text -->
                     <div id="hero-text-right"
                         class="text-huge tracking-tighter relative flex items-center justify-center translate-x-[-9px]">
                         <span class="relative z-10">OUS</span>
-
-                        <!-- Obj 3 (Heart): Larger (140px), Higher (Updated) -->
-                        <div class="hero-obj hover-float" id="obj-heart"
-                            style="top: -50%; right: 28%; width: 140px; z-index: 50; transform: rotate(15deg); filter: drop-shadow(30px 30px 10px rgba(200, 50, 255, 0.3));">
-                            <img src="./assets/images/heart_3d.png" alt="Heart 3D" class="w-full">
-                        </div>
-
-                        <!-- Obj 4 (Thumb): Raised 16px more, Right 10px more -->
-                        <div class="hero-obj hover-float" id="obj-thumb"
-                            style="top: calc(80% - 126px); right: calc(-25% - 50px); width: 280px; z-index: 50; transform: rotate(-10deg); filter: drop-shadow(30px 30px 10px rgba(255, 60, 0, 0.3));">
-                            <img src="./assets/images/thumb_3d.png" alt="Thumb 3D" class="w-full">
-                        </div>
                     </div>
                 </div>
 
@@ -294,7 +298,7 @@
 
                 <!-- 7. Circle (End) -->
                 <div class="img-strip-item w-[240px] h-[240px] rounded-full z-10 opacity-80">
-                    <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?w=2820&auto=format&fit=crop&q=80"
+                    <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?q=80&w=2820&auto=format&fit=crop&q=80"
                         class="will-change-transform">
                 </div>
 
@@ -718,11 +722,11 @@
             .to("#hero-text-left", { x: "-80vw", duration: 2, ease: "power2.inOut" }, "split")
             .to("#hero-text-right", { x: "80vw", duration: 2, ease: "power2.inOut" }, "split")
 
-            // 3D Objects: Move outward
-            .to("#obj-camera", { x: "-300px", opacity: 0, duration: 1.5, ease: "power2.in" }, "split")
-            .to("#obj-shape", { x: "-300px", opacity: 0, duration: 1.5, ease: "power2.in" }, "split")
-            .to("#obj-thumb", { x: "300px", opacity: 0, duration: 1.5, ease: "power2.in" }, "split")
-            .to("#obj-heart", { x: "250px", opacity: 0, duration: 1.5, ease: "power2.in" }, "split")
+            // 3D Objects: Move outward faster and further
+            .to("#obj-camera", { x: "-80vw", opacity: 0, duration: 0.5, ease: "power1.in" }, "split")
+            .to("#obj-shape", { x: "-80vw", opacity: 0, duration: 0.5, ease: "power1.in" }, "split")
+            .to("#obj-thumb", { x: "80vw", opacity: 0, duration: 0.5, ease: "power1.in" }, "split")
+            .to("#obj-heart", { x: "80vw", opacity: 0, duration: 0.5, ease: "power1.in" }, "split")
 
             .to("#hero-subtext", { opacity: 0, duration: 0.1 }, "split")
             .to("#scroll-down-indicator", { y: 100, opacity: 0, duration: 1.0, ease: "power2.in" }, "split")
@@ -764,10 +768,7 @@
             endTrigger: ".work-item-last",
             end: "top top+=128",
             pin: "#work-left",
-            pinSpacing: false,
-
-            scrub: 1,
-            anticipatePin: 1
+            pinSpacing: false
         });
 
 
