FAMOUS : 5 commit : 이미지 수정

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <div
                 class="creator-reveal flex flex-col items-center absolute top-[60vh] left-[10%] md:left-[15%] w-[40vw] md:w-[22vw] opacity-0 scale-50 blur-sm">
                 <div class="w-full aspect-square rounded-full overflow-hidden shadow-2xl relative group">
-                    <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=2820&auto=format&fit=crop"
+                    <img src="./assets/images/creator_1.png"
                         class="w-full h-full object-cover rounded-full transition-transform duration-700 group-hover:scale-110">
                 </div>
                 <div class="mt-5 text-center">
@@ -522,7 +522,7 @@
             <div
                 class="creator-reveal flex flex-col items-center absolute top-[100vh] right-[10%] md:right-[15%] w-[40vw] md:w-[22vw] opacity-0 scale-50 blur-sm">
                 <div class="w-full aspect-square rounded-full overflow-hidden shadow-2xl relative group">
-                    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?q=80&w=2820&auto=format&fit=crop"
+                    <img src="./assets/images/creator_2.png"
                         class="w-full h-full object-cover rounded-full transition-transform duration-700 group-hover:scale-110">
                 </div>
                 <div class="mt-5 text-center">
@@ -534,7 +534,7 @@
             <div
                 class="creator-reveal flex flex-col items-center absolute top-[140vh] left-[10%] md:left-[15%] w-[40vw] md:w-[22vw] opacity-0 scale-50 blur-sm">
                 <div class="w-full aspect-square rounded-full overflow-hidden shadow-2xl relative group">
-                    <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?q=80&w=2820&auto=format&fit=crop"
+                    <img src="./assets/images/creator_4.png"
                         class="w-full h-full object-cover rounded-full transition-transform duration-700 group-hover:scale-110">
                 </div>
                 <div class="mt-5 text-center">
@@ -546,7 +546,7 @@
             <div
                 class="creator-reveal flex flex-col items-center absolute top-[180vh] right-[10%] md:right-[15%] w-[40vw] md:w-[22vw] opacity-0 scale-50 blur-sm">
                 <div class="w-full aspect-square rounded-full overflow-hidden shadow-2xl relative group">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=2820&auto=format&fit=crop"
+                    <img src="./assets/images/creator_4_v2.png"
                         class="w-full h-full object-cover rounded-full transition-transform duration-700 group-hover:scale-110">
                 </div>
                 <div class="mt-5 text-center">
@@ -558,7 +558,7 @@
             <div
                 class="creator-reveal flex flex-col items-center absolute top-[220vh] left-[10%] md:left-[15%] w-[40vw] md:w-[22vw] opacity-0 scale-50 blur-sm">
                 <div class="w-full aspect-square rounded-full overflow-hidden shadow-2xl relative group">
-                    <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=2820&auto=format&fit=crop"
+                    <img src="./assets/images/creator_5.png"
                         class="w-full h-full object-cover rounded-full transition-transform duration-700 group-hover:scale-110">
                 </div>
                 <div class="mt-5 text-center">
@@ -570,7 +570,7 @@
             <div
                 class="creator-reveal flex flex-col items-center absolute top-[260vh] right-[10%] md:right-[15%] w-[40vw] md:w-[22vw] opacity-0 scale-50 blur-sm">
                 <div class="w-full aspect-square rounded-full overflow-hidden shadow-2xl relative group">
-                    <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?q=80&w=2820&auto=format&fit=crop"
+                    <img src="./assets/images/creator_6.png"
                         class="w-full h-full object-cover rounded-full transition-transform duration-700 group-hover:scale-110">
                 </div>
                 <div class="mt-5 text-center">
@@ -800,8 +800,8 @@
                 duration: 1,
                 scrollTrigger: {
                     trigger: item,
-                    start: "top 95%",
-                    end: "top 40%",
+                    start: "top 65%",
+                    end: "top 45%",
                     scrub: 1.5
                 }
             });
